[package]
name = "transcoder-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.80"
reqwest = { version = "0.11.24", features = ["json", "stream", "multipart"] }
aws-config = "1.1.7"
aws-sdk-s3 = "1.21.0"
dotenvy = "0.15.7"
base64 = "0.22.1"
futures = "0.3.32"
